...
      title = { BeatLinkTopLogo() },
      navigationIcon = {
        CornerIcons(
            onClick = navigationAction,
            icon = Icons.AutoMirrored.Filled.ArrowBack,
            contentDescription = "Go back",
            modifier = Modifier.testTag("goBackButton"),
            iconSize = 30.dp)
      })
}

@Composable
fun BeatLinkTopLogo() {
  Box(
      modifier = Modifier.fillMaxWidth().padding(end = 36.dp),
      contentAlignment = Alignment.Center) {
        Text(
            modifier = Modifier.testTag("appName"),
            text =
                buildAnnotatedString {
                  withStyle(style = SpanStyle(color = MaterialTheme.colorScheme.primary)) {
                    append("Beat")
                  }
                  withStyle(style = SpanStyle(color = PrimaryRed)) { append("Link") }
...
